[workspace]
members = ["examples/*"]

[package]
name = "physac"
version = "0.1.1"
edition = "2024"
description = "Physac translated into native Rust"
repository = "https://github.com/raylib-rs/physac-rs"
readme = "./README.md"
license-file = "./LICENSE.md"
keywords = ["physics", "simulation", "2d", "threading", "physac"]

[dependencies]
raylib = { version = ">=1.0", optional = true }

[features]
default = ["phys_thread"]
raylib = ["dep:raylib"]
sync = []
phys_thread = ["sync"]
debug = []
